--- a/doc/users/definitions.tex
+++ b/doc/users/definitions.tex
@@ -16,6 +16,7 @@
 \usepackage{wrapfig}
 \usepackage{charter}
 \usepackage[british]{babel}
+\usepackage{lscape}
 \usepackage{hyperref}
 \hypersetup{
   colorlinks,%
