--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,4 @@
+
 2008-05-16  Hedayat Vatankhah  <hedayat@grad.com>
 
 	* lib/kerosin/imageserver/imageserver.cpp (ImageServer::Load):
@@ -19,6 +20,7 @@
 
 2008-05-16  Xu Yuan  <xuyuan.cn@gmail.com>
 
+	* app/simspark/rsg/agent/ball.rsg:
 	* app/simspark/models/soccerball.obj:
 	- increase the model size to match the geometry
 
