--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,18 @@
+2008-05-22  FengXue <henry519@mail.ustc.edu.cn>
+	* lib/oxygen/physicsserver/contactjointhandler.cpp:
+	- Add the slip value check
+
+	* app/simspark/rsg/agent/ball.rsg:
+	- Better ball parameter
+
+	* app/simspark/rsg/agent/nao/touchperceptorhandler.rsg:
+	* app/simspark/rsg/agent/nao/contactjointhandler.rsg:
+	- Disable the bounce of robot and add slip
+
+	* app/simspark/rsg/agent/nao/ccylinder_physics.rsg:
+	- Fixed a bug.
+
+
 2008-05-19  Ben  <benpwd@users.sourceforge.net>
 
 	* plugin/soccer/restrictedvisionperceptor/restrictedvisionperceptor.h:
