Refined the physics performance. RC version. Here is the log:         * lib\oxygen\physicsserver\collider.h:         * lib\oxygen\physicsserver\collider.cpp:         * lib\oxygen\physicsserver\collider_c.cpp:         * lib\oxygen\physicsserver\space.cpp:         - Add the feature that a collider can be set not           colliding with another collider
        * app\simspark\rsg\agent\nao\nao.rsg:
        * app\simspark\rsg\agent\nao\naoleg.rsg:
        - Enable the inner collision
        - Torso will not collide with the two thighs
        - Foot and shank in the same leg will not collide with each other
        - Change the foot size and hip drift size to the original value.
          The old value is not good, thanks Ben!

        * lib\spark\spark.rb:
        - Set the global cfm to 1e-5, the old value is 1e-3.
          This solves two problems:
          1. The extra error when doing forward kinematics
          2. The drift of joint stops when pushed by a large force.

        * app\simspark\rsg\agent\nao\hingejoint.rsg:
        - Refined the hingejoint parameters

        * app\simspark\rsg\agent\ball.rsg:
        - Refined the ball parameters

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,31 @@
+2008-05-30  FengXue  <henry519@mail.ustc.edu.cn>
+	* lib\oxygen\physicsserver\collider.h:
+	* lib\oxygen\physicsserver\collider.cpp:
+	* lib\oxygen\physicsserver\collider_c.cpp:
+	* lib\oxygen\physicsserver\space.cpp:
+	- Add the feature that a collider can be set not
+	  colliding with another collider
+
+	* app\simspark\rsg\agent\nao\nao.rsg:
+	* app\simspark\rsg\agent\nao\naoleg.rsg:
+	- Enable the inner collision
+	- Torso will not collide with the two thighs
+	- Foot and shank in the same leg will not collide with each other
+	- Change the foot size and hip drift size to the original value. 
+	  The old value is not good, thanks Ben! 
+
+	* lib\spark\spark.rb:
+	- Set the global cfm to 1e-5, the old value is 1e-3.
+	  This solves two problems:
+	  1. The extra error when doing forward kinematics 
+	  2. The drift of joint stops when pushed by a large force.
+
+	* app\simspark\rsg\agent\nao\hingejoint.rsg:
+	- Refined the hingejoint parameters
+
+	* app\simspark\rsg\agent\ball.rsg:
+	- Refined the ball parameters
+
 2008-05-28  Ben  <benpwd@users.sourceforge.net>
 
 	* app/simspark/rsg/agent/nao/naoneckhead.rsg
