--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,46 @@
+[0.5.9]
+This release is the candidate of RoboCup 2008. There are some
+important improvements. Firstly, the physics parameters are well
+adjust to make the simulation more real and stable. Secondly, the
+restrict vision perceptor is used, which the vision range is limited,
+but more details will be seen, i.e. the head, hands and feet of robots
+can be seen. Furthermore, the some soccer rule and visual features are
+improved.
+
+* Physics Parameters:
+ Some physics parameters are adjusted to make the simulation more real
+ and stable.
+ - Joint parameters: the max force and max speed of the joint are
+ restricted, and some other parameters are modified.
+ - Ball parameters: the parameters of drag are modified.
+
+* Restrict Vision: 
+ The restrict vision perceptor is installed both in nao and
+ soccerbot058. This perceptor have some restriction compared with
+ original vision perceptor. Firstly, the robots can only see object in
+ the limited angle range (both horizontal and vertical angle ranges
+ are [-60, 60] in degree). Secondly, the frequent is restricted, the
+ robot can get one vision message every 3 cycles. Furthermore, note
+ that the noise is added to the vision information.
+
+ However, the information is richer: the robot's torso, head, hands
+ and feet can be seen. The flags placed in the field can also be seen
+ (They are no visual in the screen now, but the robot can see them).
+ Four flags are placed at the field corners (the height is 0), and the
+ four flags are placed at the goal posts (the corner of the goal).
+
+* Visual:
+ - The Nao robot can be identified by team colors and numbers. You can
+ play a match with Nao robots ;-)
+ - the monitor camera can be controlled by number keys (from 1 to 7)
+
+* Soccer Rule:
+ - Field Size: the field size is 12mx8m, the center circle radius is
+1.3m, the penalty size is 1.2mx4m. More information please see
+naosoccersim.rb.
+ - Kick Off: the kick off team can enter the center circle, and the
+   opponents will be moved away from the center circle.
+
 [0.5.8]
  In this release, we have a simulator which is much more like the
  RoboCup Humanoid League: The smaller size, the smaller robot and
