* doc/users/definitions.tex: * doc/users/robots.tex: * doc/users/user-manual.tex: * doc/users/fig/naojoints.png: * doc/users/fig/realNao.png: * doc/users/fig/virtualNao.png: - add contents abour Nao from Feng

--- a/doc/users/definitions.tex
+++ b/doc/users/definitions.tex
@@ -107,15 +107,16 @@
 				Klaus Dorer\\%
 				Markus Rollmann\\%
 				Yuan Xu\\%
+                                Feng Xue\\%
 			}
 		}
 	\end{minipage}
 	\hspace*{6cm}
 	\begin{minipage}[t]{0.5\linewidth}
-	\textsf{\Large\flushright{Version 1.0}}
+	\textsf{\Large\flushright{Version 1.1}}
          \end{minipage}
 	
-	\vspace{-1.75cm}
+	\vspace{-2.5cm}
 		
 	\begin{minipage}[t]{\linewidth}
 	\hspace*{2.25cm}
@@ -125,7 +126,7 @@
 	\vspace*{-0.25cm}
 	\hspace*{-3cm}%
 	\begin{minipage}[b]{3cm}
-	\textsf{\Large\flushleft{March 2008}}
+	\textsf{\Large\flushleft{June 2008}}
         	\end{minipage}
 	
   \end{titlepage}%
