--- a/doc/users/user-manual.tex
+++ b/doc/users/user-manual.tex
@@ -1,9 +1,10 @@
 \include{definitions}
 
-\author{Joschka Boedecker \\ Klaus Dorer \\ Markus Rollmann}
+\author{Joschka Boedecker \\ Klaus Dorer \\ Markus Rollmann \\ Yuan Xu
+\\ Feng Xue}
 \title{Simspark User Manual}
 
-\date{March 2008}
+\date{June 2008}
 
 \begin{document}
 
