- correction frome Feng

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-06-03  Xu Yuan  <xuyuan.cn@gmail.com>
+
+	* doc/users/robots.tex:
+	- correction frome Feng
+
 2008-06-02  Xu Yuan  <xuyuan.cn@gmail.com>
 
 	* doc/users/definitions.tex:
