--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2008-06-06  Hedayat Vatankhah  <hedayat@grad.com>
+
+	* linux/rcssserver3d.desktop:
+	* linux/rcssserver3d-rsgedit.desktop:
+	* linux/rcssserver3d.png:
+	- added icon and .desktop files to add menu entries for simspark & rsgedit
+
+	* app/simspark/Makefile.am:
+	- remove executable permission only for files
+
 2008-06-06  Sander van Dijk <sgvandijk@gmail.com>
 
 	* plugin/soccer/visionperceptor/visionperceptor.h
