Some small fixes (for packaging)

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,6 +1,6 @@
 Authors of rcssserver3D:
 
-Marco Kögler <koegler@uni-koblenz.de>
+Marco KÃ¶gler <koegler@uni-koblenz.de>
 Markus Rollmann <rollmark@uni-koblenz.de>
 Oliver Obst <fruit@users.sf.net>
 Pat Riley <pfr@cs.cmu.edu>
@@ -8,7 +8,7 @@ Tom Howard <tomhoward@users.sf.net>
 Heni Ben Amor <amor@uni-koblenz.de>
 Irene Markelic <irene@markelic.de>
 Jan Murray <murray@uni-koblenz.de>
-Joschka Bödecker <jboedeck@uni-koblenz.de>
+Joschka BÃ¶decker <jboedeck@uni-koblenz.de>
 Christoph Ringelstein <cringel@uni-koblenz.de>
 Hesham Ebrahimi <heshamebrahimi@gmail.com>
 
