--- a/README
+++ b/README
@@ -112,7 +112,7 @@ Known Problems:
 
 Literature:
 
-[1] Marco Kögler and Oliver Obst. Simulation League: The Next Generation.
+[1] Marco KÃ¶gler and Oliver Obst. Simulation League: The Next Generation.
     In Daniel Polani, Andrea Bonarini, Brett Browning, and Kazuo
     Yoshida, editors, RoboCup 2003: Robot Soccer World Cup VII,
     Lecture Notes in Artificial Intelligence, Springer, Berlin,
