--- a/TODO
+++ b/TODO
@@ -11,7 +11,7 @@ is to use a absolute directory
 
 For later:
 
-- see dysim tübingen
+- see dysim tÃ¼bingen
 
 - Split Spark and Soccer stuff, create new SF project simspark
   The soccer specific stuff remains at sserver.
